对照片进行匹配

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//com/test/KNN_test03.py=utf-8
 encoding//com/test/KNN_test04.py=utf-8
 encoding//com/test/creatDatSet.py=utf-8
 encoding//com/test/kNN_test02.py=utf-8
+encoding//com/video/face_test.py=utf-8
